<resources>
    <string name="home_str">ИФКСТ</string>
    <string name="lk">Профиль</string>
    <string name="timetable">Расиписание</string>
    <string name="rating">Рейтинг</string>
    <string name="calendar">Календарь</string>
    <string name="ads">Объявления</string>
    <string name="UFZ">Запись на УФЗ</string>
    <string name="app_dis">Заявка на дисциплину</string>
    <string name="app_teams">Заявку в сборные СПБПУ</string>
    <string name="app_health">Заявку на группу здоровья</string>
    <string name="feedback">Обратная связь</string>
    <string name="about_system">Подробнее о системе</string>
    <string name="exit">Выйти</string>


    <string name="app_name">POLY</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="pusto"> </string>
    <string name="feedback_info">Выберите собеседника из списка доступных контактов для отправки сообщения</string>

    <string name="zayavka_v_sbornye">Заявка в Сборные команды СПбПУ не может быть создана, если у вас не основная группа здоровья или до тех пор, пока заявка на основную группу здоровья не будет подтверждена. Временно реализован механизм подачи заявки без справки (смотри информацию на странице подачи заявки на группу здоровья)</string>
    <string name="for_start">Для начала вам необходимо пройти медосмотр в поликлинике по месту регистрации/поликлинике № 76, получить справку о группе здоровья, загрузить её фото или скан на сайте.</string>

    <string name="zayavka_na_spec">Заявка в группы специализации не может быть создана до тех пор, пока заявка на группу здоровья не будет подтверждена.</string>
    <string name="text_points1">Максимальный балл: 177,5</string>
    <string name="text_points2">Текущий суммарный рейтинг:</string>
    <string name="text_have">Имеется</string>
    <string name="text_must">Нужно</string>
    <string name="text_max">Максимум</string>

    <string name="name_1">PolySport</string>
    <string name="student">Студент</string>
    <string name="student_name">Иванов Иван Иванович</string>
    <string name="info">Добро пожаловать на платформу\nинститута физической культуры, спорта\nи туризма Санкт-Петербургского\nПолитехнического университета Петра/nВеликого. Это приложение призвано помочь тебе\nс прохождением курса физической\nкультуры.</string>


    <string name="text_gz">В случае отсутствия справки можете не загружать документ. Учебный отдел может выдать временный допуск к занятиям на месяц. Не забудьте загрузить справку на портал после получения!</string>
    <string name="text_act_1">В списке отображаются зарядки, до проведения которых осталось не более 5 дней.</string>
    <string name="text_act_2">При этом запись на зарядку доступна за 3 дня до проведения.</string>
    <string name="text1_team">Вы можете подать заявку на вступление в любую сборную из представленного списка. В настоящий момент мы не имеем доступа к данным, которые позволили ли бы отфильтровать сборные по полу, будьте внимательны при выборе сборной. В случае, если не отображается календарь при вводе дня рождения, введите его вручную в формате "ГГГГ-ММ-ДД" (ГГГГ - год в формате 4 цифр, ММ - месяц от 00 до 12, ДД - день от 00 до 31). При подаче заявки поля "разряд", "ГТО (уин)" можно оставить пустыми, обратите внимание, что уин ГТО - это 11 цифр, которые могут быть разделены пробелами, ",", "." или "-".</string>
    <string name="text2_team">"Членство в сборных СПб/России" теперь перенесено в отдельный интерфейс. Чтобы перейти в нему нажмите "Членство в сборных СПб/России".</string>
    <string name="text3_team">Вы можете отфильтровать сборные по тренеру и/или виду спорта, используя "фильтры".</string>
    <string name="text4_team">Чтобы посмотреть расписание тренировок, нажмите: "Показать расписание".</string>
    <string name="text5_team">Чтобы перейти к заполнению заявки, нажмите: "Подать заявку".</string>
    <string name="text6_team">Добавлено сжатие изображение, но оно не гарантирует, что суммарный вес файлов не превысит 10 мб, поэтому если вы получите ошибку 413 необходимо либо уменьшить размер изображений, либо их количество.</string>
    <string name="text7_team">Сборные, в которые вы уже подали заявку, не отображаются в данном списке.</string>
    <string name="text1_sis">Суммарный рейтинг (СР) обучающегося определяется как сумма баллов, набранных студентом в процессе освоения дисциплины при условии, что текущий рейтинг (ТР) больше минимального порога: СР = ТР + КБ + ПР Суммарный рейтинг для получения зачета по дисциплине «Элективная физическая культура» должен составлять не менее 100 баллов.</string>
    <string name="text2_sis">Текущий рейтинг (ТР) определяется как сумма баллов, набираемых обучающимся за посещаемость учебных занятий и сдачу нормативов. Посещение 1 занятия оценивается в 2.5 балла для студентов 1 курса и в 2.5 балла для студентов 2 курса, успешная сдача 1 норматива – 3 балла (в соответствии с приложением 1). Минимальный порог посещаемости учебных занятий определяется в 50 баллов (посещение 70% занятий), сдачи нормативов – 15 баллов (успешная сдача 50% нормативов). Максимальный порог посещаемости учебных занятий определяется в 77,5 баллов (посещение 100% занятий), сдачи нормативов – 30 баллов (успешная сдача 100% нормативов). В случае, если по итогам отчетного периода текущий рейтинг больше минимального порога, но меньше необходимых 100 баллов для получения зачета, обучающемуся могут дополнительно засчитаться компенсационные баллы.</string>
    <string name="text3_sis">Компенсационные баллы (КБ) - сумма баллов, набираемых студентом в течение отчетного периода за следующую деятельность (в соответствии с таблицей ниже): - участие в спортивных мероприятиях СПбПУ – посещение 1 дня мероприятия оценивается в 3 балла для студентов 1 курса и в 2,5 балла для студентов 2 курса в качестве участника либо волонтера; - посещение утренней физической зарядки (УФЗ) – посещение 1 занятия оценивается в 2.5 балла для студентов 1 курса и в 2.5 балла для студентов 2 курса. Максимальная величина компенсационных баллов равна 35 (за весь отчетный период).</string>
    <string name="text4_sis">Премиальный рейтинг (ПР) определяется как сумма баллов, набираемых студентом в течение отчетного периода за следующую деятельность (в соответствии с таблицей ниже): - участие в научных конференциях под руководством сотрудников ИФКСТ; - сдача нормативов ГТО; Учитывается максимальный результат в течение отчетного периода. Максимальная величина премиального рейтинга составляет 35 баллов (за весь отчетный период).</string>
    <string name="text1_cont">Котов Иван</string>
    <string name="text2_cont">Тех.поддержка по системе сборных команд СПбПУ (для вопросов, связанных со сборными командами и т.д.)</string>
    <string name="text3_cont">Осокина Любовь</string>
    <string name="text4_cont">Учебный отдел</string>
    <string name="text5_cont">Гаврилина Алина Олеговна</string>
    <string name="text6_cont">Преподаватель</string>


    <!--first-->
    <string name="snf">Гавва Георгий Дмитриевич</string>
    <string name="group">4831001/90001</string>
    <string name="institute">ИКиЗИ</string>
    <!--second-->
    <string name="h_group">Подготовительная</string>
    <string name="spec">ОФП (общая физическая подготовка)</string>
    <!--third-->
    <string name="point_visit">27,5</string>
    <string name="point_standard">0,0</string>
    <string name="point_compensation">0,0</string>
    <!--fourth-->
    <string name="point_bonus">0,0</string>
    <string name="point_sum">27,5</string>
    <string name="top_position">18</string>
    <!--fifth-->
    <string name="lesson1">ОФП (общая физическая подготовка), Гаврилина А.О., 2 курс, среда, Пара 3. 12:00 - 13:40, чётная</string>
    <string name="lesson2">ОФП (общая физическая подготовка), Гаврилина А.О., 2 курс, среда, Пара 3. 12:00 - 13:40, нечётная</string>
    <string name="lesson3">ОФП (общая физическая подготовка), Гаврилина А.О., 2 курс, суббота, Пара 3. 14:00 - 15:40, чётная</string>
    <string name="lesson4">ОФП (общая физическая подготовка), Гаврилина А.О., 2 курс, суббота, Пара 3. 14:00 - 15:40, нечётная</string>
    <string name="active">активная</string>
    <string name="update">28 сентября 2020 г. 13:29</string>
    <string name="create">26 сентября 2020 г. 14:10</string>
    <!--sixth-->
    <string name="status">Активная</string>
    <string name="doc">Файл</string>
    <string name="h_update">24 сентября 2021 г.</string>
    <string name="h_create">23 сентября 2021 г.</string>
    <string name="h_period">23 сентября 2021 г.</string>

</resources>