<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fon">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activity_text_sis1_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/text1_sis"
                android:textColor="@color/black"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/activity_text_sis2_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_text_sis1_a"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/text2_sis"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_text_sis3_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_text_sis2_a"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:gravity="center"
                android:text="@string/text3_sis"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/activity_text_sis4_a"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/activity_text_sis3_a"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="50dp"
                android:gravity="center"
                android:text="@string/text4_sis"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
